# stock-research-tool-20260530

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  research_app.py  vercel.json
.streamlit/: secrets.example.toml
api/: _common.py  filings.py  index.py  package.py  search.py
pages/: 01_AI_Industry_Research.py
public/: index.html
src/: __init__.py  bing_discovery.py  china_sources.py  cninfo_fetcher.py  company_search_global.py  download_packager.py  excel_writer.py  filing_fetcher_us.py  hkex_fetcher.py  ir_scraper.py  platform_discovery.py  private_company_sources.py  research_anomalies.py  research_display.py  research_evidence_backfill.py  research_financials.py  research_html.py  research_llm.py  research_mobile_validation.py  research_models.py  research_pipeline.py  research_screenshots.py  research_storage.py  research_text_insights.py  research_universe.py  research_validation.py  scrapling_fetcher.py  table_extractor.py  transcript_fetcher.py  utils.py  vercel_common.py  vercel_frontend.py  web_pdf.py  web_readability.py  wind_client.py
