[project]
name = "stock-research-tool"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.28.0",
  "requests>=2.31.0",
  "pdfplumber>=0.10.0",
  "openpyxl>=3.1.2",
  "beautifulsoup4>=4.12.0",
  "yfinance>=0.2.40",
  "lxml>=4.9.0",
  "anthropic>=0.39.0",
  "reportlab>=4.2.0",
]

[tool.vercel]
entrypoint = "api.index:app"
